--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>How to Earn Chips by Watching Ads in WithVegas</title>
   <meta name="description" content="WithVegas offers players a fun and engaging way to earn chips, and one of the simplest methods is by watching ads.">
-  <link rel="canonical" href="https://stonelaw.vercel.app">
+  <link rel="canonical" href="https://withvegas.vercel.app">
 <meta name="robots" content="index,follow">
    
   
@@ -63,7 +63,8 @@
 
 <h1>How to Earn Chips by Watching Ads in WithVegas</h1>
 
-<p>WithVegas offers players a fun and engaging way to earn chips, and one of the simplest methods is by watching ads. This feature allows you to accumulate chips without spending real money, making it an attractive option for both casual and dedicated players. In this blog post, we’ll explore how you can effectively earn chips by <a href="https://withvegas.com/">watching ads</a> in WithVegas.</p>
+<p>WithVegas offers players a fun and engaging way to earn chips, and one of the simplest methods is by watching ads. This feature allows you to accumulate chips without spending real money, making it an attractive option for both casual and dedicated players.</p> 
+  <p>In this blog post, we’ll explore how you can effectively earn chips by <a href="https://withvegas.com/">watching ads</a> in WithVegas.</p>
   
 <div style="text-align: center;">
 <img src="https://i.postimg.cc/mgksJLG2/1-6.jpg" alt="gaming.jpg" style="max-width: 100%; height: auto;">
